Fixed H$ spacing in About sections

--- a/web/css/pages/about.scss
+++ b/web/css/pages/about.scss
@@ -19,6 +19,7 @@ section.content-section {
         max-width: 700px;
         box-sizing: border-box;
         margin-bottom: 2em;
+        h4 { margin-bottom: 1em; }
     }
     @media screen and (min-width: $break-large) {
         .copy, img { width: 50%; }
